src/pre_push/publication_attempt/snapshots/gherrit__pre_push__publication_attempt__body__tests__bounded_provisional_public_stack.snap
---
source: src/pre_push/publication_attempt/body.rs
expression: report
---
===== Groot =====
<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->

Introduce the root.

---

This PR is on branch [feature\-\/public\-stack](/octo/widgets/tree/feature-/public-stack).


<details>
<summary><strong>⬇️ Download this PR</strong></summary>

######

**Branch**
```bash
git fetch origin refs/heads/Groot && git checkout -b pr-Groot FETCH_HEAD
```

**Checkout**
```bash
git fetch origin refs/heads/Groot && git checkout FETCH_HEAD
```

**Cherry Pick**
```bash
git fetch origin refs/heads/Groot && git cherry-pick FETCH_HEAD
```

**Pull**
```bash
git pull origin refs/heads/Groot
```

</details>

*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*
===== Gmiddle =====
<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->

Build on the root.

---

This PR is on branch [feature\-\/public\-stack](/octo/widgets/tree/feature-/public-stack).


<details>
<summary><strong>⬇️ Download this PR</strong></summary>

######

**Branch**
```bash
git fetch origin refs/heads/Gmiddle && git checkout -b pr-Gmiddle FETCH_HEAD
```

**Checkout**
```bash
git fetch origin refs/heads/Gmiddle && git checkout FETCH_HEAD
```

**Cherry Pick**
```bash
git fetch origin refs/heads/Gmiddle && git cherry-pick FETCH_HEAD
```

**Pull**
```bash
git pull origin refs/heads/Gmiddle
```

</details>

*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*
===== Gtip =====
<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->

Finish the stack.

---

This PR is on branch [feature\-\/public\-stack](/octo/widgets/tree/feature-/public-stack).


<details>
<summary><strong>⬇️ Download this PR</strong></summary>

######

**Branch**
```bash
git fetch origin refs/heads/Gtip && git checkout -b pr-Gtip FETCH_HEAD
```

**Checkout**
```bash
git fetch origin refs/heads/Gtip && git checkout FETCH_HEAD
```

**Cherry Pick**
```bash
git fetch origin refs/heads/Gtip && git cherry-pick FETCH_HEAD
```

**Pull**
```bash
git pull origin refs/heads/Gtip
```

</details>

*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*
