src/pre_push/publication_attempt/snapshots/gherrit__pre_push__publication_attempt__body__tests__bounded_repeated_a_a_b_a_history.snap
---
source: src/pre_push/publication_attempt/body.rs
expression: normalized
---
<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->

Repeat without collapsing versions.

---

- 👉 #7


**Latest Update:** v4 — [Compare vs v3](/octo/widgets/compare/gherrit/Grepeat/v3..gherrit/Grepeat/v4)

<details>
<summary><strong>📚 Full Patch History</strong></summary>

*Links show the diff between the row version and the column version.*

|Version| v3 | v2 | v1 |Base|
|:---|:---|:---|:---|:---|
|v4|[vs v3](/octo/widgets/compare/gherrit/Grepeat/v3..gherrit/Grepeat/v4)|[vs v2](/octo/widgets/compare/gherrit/Grepeat/v2..gherrit/Grepeat/v4)|[vs v1](/octo/widgets/compare/gherrit/Grepeat/v1..gherrit/Grepeat/v4)|[vs Base](/octo/widgets/compare/<shared-base>...gherrit/Grepeat/v4)|
|v3||[vs v2](/octo/widgets/compare/gherrit/Grepeat/v2..gherrit/Grepeat/v3)|[vs v1](/octo/widgets/compare/gherrit/Grepeat/v1..gherrit/Grepeat/v3)|[vs Base](/octo/widgets/compare/<shared-base>...gherrit/Grepeat/v3)|
|v2|||[vs v1](/octo/widgets/compare/gherrit/Grepeat/v1..gherrit/Grepeat/v2)|[vs Base](/octo/widgets/compare/<shared-base>...gherrit/Grepeat/v2)|
|v1||||[vs Base](/octo/widgets/compare/<shared-base>...gherrit/Grepeat/v1)|

</details>
<details>
<summary><strong>⬇️ Download this PR</strong></summary>

######

**Branch**
```bash
git fetch https://github.com/octo/widgets.git refs/heads/Grepeat && git checkout -b pr-Grepeat FETCH_HEAD
```

**Checkout**
```bash
git fetch https://github.com/octo/widgets.git refs/heads/Grepeat && git checkout FETCH_HEAD
```

**Cherry Pick**
```bash
git fetch https://github.com/octo/widgets.git refs/heads/Grepeat && git cherry-pick FETCH_HEAD
```

**Pull**
```bash
git pull https://github.com/octo/widgets.git refs/heads/Grepeat
```

</details>

*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*
